now uses List.of() method